# tg-devices

./: .pre-commit-config.yaml  CHANGELOG.rst  GEMINI.md  LICENSE  README.rst  pyproject.toml
tests/: test_generator.py  test_weight_precomputation.py
tg_devices/: __init__.py
tg_devices/compatibility/: inspection.py  map.py
tg_devices/enums/: linux.py
tg_devices/generator/: generator.py  profile.py  protocols.py
tg_devices/random/: protocols.py  provider.py
tg_devices/weight/: protocols.py  provider.py  weights.py
tg_devices/weight/introspection/: __init__.py  android.py  linux.py  macos.py  weight_precomputation.py  windows.py
